tdf#113254 fix regression - images not displayed in MSO

regression of commit	31ee13b5a40715e217711e48753eeb7170e3349c
    convert SHAPEFLAG defines to scoped enum ShapeFlag

This patch restores original behaviour
and re-adds clarified comment.

Change-Id: Ie4f75902611127ccef7fa1ca3d32b87f06675db4
Reviewed-on: https://gerrit.libreoffice.org/44424
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jochen Nitschke <j.nitschke+logerrit@ok.de>